# internal/http/response/response.go
@@ -3,9 +3,11 @@ package response
 import "github.com/gin-gonic/gin"
 
 type Envelope struct {
-	Error   bool        `json:"error"`
-	Message string      `json:"message,omitempty"`
-	Data    interface{} `json:"data,omitempty"`
+	Error       bool        `json:"error"`
+	Message     string      `json:"message,omitempty"`
+	Data        interface{} `json:"data,omitempty"`
+	Pagination  interface{} `json:"pagination,omitempty"`
+	StatusCount interface{} `json:"statusCount,omitempty"`
 }
 
 func Success(c *gin.Context, data interface{}) {
@@ -14,6 +16,14 @@ func Success(c *gin.Context, data interface{}) {
 
 func Created(c *gin.Context, data interface{}) {
 	c.JSON(201, Envelope{Error: false, Data: data})
+}
+
+func SuccessWithPagination(c *gin.Context, data interface{}, pagination interface{}) {
+	c.JSON(200, Envelope{Error: false, Data: data, Pagination: pagination})
+}
+
+func SuccessWithPaginationAndStatusCount(c *gin.Context, data interface{}, pagination interface{}, statusCount interface{}) {
+	c.JSON(200, Envelope{Error: false, Data: data, Pagination: pagination, StatusCount: statusCount})
 }
 
 func Error(c *gin.Context, code int, message string) {
